--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "inquirer": "^8.2.5",
-    "mysql2": "^3.4.0"
+    "mysql2": "^3.4.0",
+    "util": "^0.12.5"
   }
 }
